--- a/about.html
+++ b/about.html
@@ -65,6 +65,8 @@
 						<li><a href="insurance-details.html">Home Policy</a></li>
 						<li><a href="insurance-details.html">Life Policy</a></li>
 						<li><a href="insurance-details.html">Travel Policy</a></li>
+						<li><a href="premium.html">Calculate Premium</a></li>
+						<li><a href="premium.html">Calculate Premium</a></li>
 					</ul>
 				</li>
 				<li><a href="contact.html">Contacts</a></li>
