--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@
 						<li><a href="insurance-details.html">Home Policy</a></li>
 						<li><a href="insurance-details.html">Life Policy</a></li>
 						<li><a href="insurance-details.html">Travel Policy</a></li>
+						<li><a href="premium.html">Calculate Premium</a></li>
 					</ul>
 				</li>
 				<li class="active"><a href="contact.html">Contacts</a></li>
