--- a/insurance.html
+++ b/insurance.html
@@ -66,6 +66,7 @@
 						<li><a href="#">Home Policy</a></li>
 						<li><a href="#">Life Policy</a></li>
 						<li><a href="#">Travel Policy</a></li>
+						<li><a href="premium.html">Calculate Premium</a></li>
 					</ul>
 				</li>
 				<li><a href="contact.html">Contacts</a></li>
